# SMesh

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
application/: CMakeLists.txt
application/resources/: application.qrc
application/src/: main.cpp  mainwindow.cc  mainwindow.h  mainwindow.ui  renderwidget.cc  renderwidget.h
core/: CMakeLists.txt
core/src/: log.cc  log.h  renderer.cc  renderer.h
core/src/smesh/: common.h  core.h
core/src/smesh/config/: config.cc  config.h  object_config.cc  object_config.h  scene_config.cc  scene_config.h
core/src/smesh/log/: log.cc  log.h
core/src/smesh/math/: plane.h  ray.cc  ray.h
core/src/smesh/mesh/: mesh.cc  mesh.h
core/src/smesh/qt/: config_edit_widget.cc  config_edit_widget.h  modelobject.h  object_list_model.cc  object_list_model.h  rendercontrol.cc  rendercontrol.h  rendercontrol.ui  renderwidget.cc  renderwidget.h
core/src/smesh/render/: camera.cc  camera.h  modelobject.cc  modelobject.h  renderer.cc  renderer.h  rotation.cc  rotation.h  transform.cc  transform.h  utils.cc  utils.h
core/src/smesh/render/shader/: grid_fragment.glsl  grid_vertex.glsl  inverted_hull_fragment.glsl  inverted_hull_vertex.glsl  object_fragment.glsl  object_geometry.glsl  object_vertex.glsl  outline_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl  wireframe_fragment.glsl  wireframe_geometry.glsl  wireframe_vertex.glsl
glwrapper/: CMakeLists.txt
glwrapper/include/: gl_common.h  shader.h  shader_program.h  texture.h
glwrapper/src/: buffer.cc  buffer.h  gl_client.cc  gl_client.h  gl_common.cc  gl_common.h  shader.cc  shader_program.cc  texture.cc  vertex_array.cc  vertex_array.h
modules/: CMakeLists.txt
modules/glwrapper/: CMakeLists.txt
modules/glwrapper/src/: buffer.cc  buffer.h  frame_buffer.cc  frame_buffer.h  glclient.cc  glclient.h  glcommon.cc  glcommon.h  glfunc.cc  glfunc.h  render_buffer.cc  render_buffer.h  shader.cc  shader.h  shader_program.cc  shader_program.h  texture.cc  texture.h  vertex_array.cc  vertex_array.h
modules/qtextension/: CMakeLists.txt
modules/qtextension/src/: exvariantmanager.h  qtvectorproperty.cpp  qtvectorproperty.h
modules/qtimgui/: CMakeLists.txt
modules/qtimgui/src/: QtImGui.cpp
modules/qtpropertybrowser/: CMakeLists.txt
modules/qtpropertybrowser/src/: qtbuttonpropertybrowser.cpp  qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtgroupboxpropertybrowser.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
tests/: CMakeLists.txt  configtest.cc
